# landlors

./: Actions.qml  CMakeLists.txt  Card.qml  CardType.qml  Cards.qml  CardsPrepare.qml  Content.qml  Deck.qml  Dialogs.qml  Elements.qml  Handcard.qml  Images.qml  Model.qml  Music.qml  PlayControl.qml  Player.qml  Robot.qml  UserPlayer.qml  Window.qml  card.cpp  card.h  card.js  cardNode.cpp  cardNode.h  cardType.cpp  cardType.h  cardWeight.cpp  cardWeight.h  cardtype.cpp  cardtype.h  game.cpp  game.h  game.js  main  main.cpp  playcontrol.cpp  playcontrol.h  player.js  resources.qrc  test.js  (+2 more)
